data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_870.wast
;; 1. **Test Description:**    - Create a WASM module A that exports a function containing multiple `nop` instructions and some basic arithmetic. Create another WASM module B that imports this function and calls it within a loop. Verify that control flow correctly returns back to module B without disturbing the stack state.    - **Constraint Checked:** Ensures `nop` instructions do not interfere with return control flow between modules.    - **Relation to Issue:** Tests if `nop` affects cross-module function calls.

(assert_invalid 
  (module 
    (func $A 
      (export "test") 
      (param $x i32) 
      (local $sum i32) 
      (local.set $sum (i32.const 0)) 
      (loop $loop 
        (nop) 
        (local.set $sum (i32.add (local.get $sum) (i32.const 1))) 
        (br_if $loop (i32.lt_u (local.get $sum) (local.get $x))) 
      ) 
      (nop) 
      (drop (local.get $sum)) 
    ) 
  ) 
  (module 
    (import "env" "test" (func $test (param i32))) 
    (func (loop 
      (call $test (i32.const 10)) 
      (br 0)
    )) 
  ) 
  "type mismatch"
)